{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 184,
  "lineage": "4ea4bdab-37a6-56c2-1796-6bc8d143ef0b",
  "resources": [
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_prj_jump_box",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0089b31e09ac3fffc",
            "arn": "arn:aws:ec2:eu-west-2:044463453895:instance/i-010d825f0b1bec205",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "terraform-20200111201340685400000001",
            "id": "i-010d825f0b1bec205",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cfn-kp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d107673b6f98a42d",
            "private_dns": "ip-172-31-21-158.eu-west-2.compute.internal",
            "private_ip": "172.31.21.158",
            "public_dns": "ec2-35-176-246-139.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.246.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-001c238d831918491",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sec-grp-https",
              "sec-grp-ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2d167c8",
            "tags": {
              "Name": "tf-prj-wp-blog",
              "Project": "tf-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-047554a2b29ba1ece",
              "sg-06fcbe5edcd3021ca",
              "sg-0d69fdf093e33c8b7"
            ]
          },
          "dependencies": [
            "module.instance.module.iam.aws_iam_instance_profile.instance_profile",
            "module.instance.module.security_group.aws_security_group.ec2_mysql_sg",
            "module.instance.module.security_group.aws_security_group.https_sg",
            "module.instance.module.security_group.aws_security_group.ssh_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_mysql_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-047554a2b29ba1ece",
            "description": "security group to allow access on port 3306",
            "egress": [],
            "id": "sg-047554a2b29ba1ece",
            "ingress": [],
            "name": "sec-grp-ec2-mysql",
            "name_prefix": null,
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tf-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          }
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-06fcbe5edcd3021ca",
            "description": "security group to allow http access to the resource",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows http access on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows https access on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-06fcbe5edcd3021ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows http access on port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allows https access on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "sec-grp-https",
            "name_prefix": null,
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tf-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          }
        }
      ]
    },
    {
      "module": "module.instance.module.db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_mysql_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-00ff7e32ab4f5856f",
            "description": "security group to allow access on port 3306",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allows mysql access on port 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fcbe5edcd3021ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-00ff7e32ab4f5856f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allows mysql access on port 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06fcbe5edcd3021ca"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sec-grp-mysql",
            "name_prefix": null,
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tf-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          }
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-0d69fdf093e33c8b7",
            "description": "security group to allow ssh access to the resource",
            "egress": [],
            "id": "sg-0d69fdf093e33c8b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "88.98.242.130/32"
                ],
                "description": "allows ssh access on port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sec-grp-ssh",
            "name_prefix": null,
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "tf-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          }
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ec2_mysql_e",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allows mysql access on port 3306",
            "from_port": 3306,
            "id": "sgrule-2846497131",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047554a2b29ba1ece",
            "self": false,
            "source_security_group_id": "sg-00ff7e32ab4f5856f",
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "module.instance.module.db.aws_security_group.rds_mysql_sg",
            "module.instance.module.security_group.aws_security_group.ec2_mysql_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ec2_mysql_i",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "allows mysql access on port 3306",
            "from_port": 3306,
            "id": "sgrule-477678895",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-047554a2b29ba1ece",
            "self": false,
            "source_security_group_id": "sg-00ff7e32ab4f5856f",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.module.db.aws_security_group.rds_mysql_sg",
            "module.instance.module.security_group.aws_security_group.ec2_mysql_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_e",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allows http access on port 80",
            "from_port": 80,
            "id": "sgrule-3228698311",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fcbe5edcd3021ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "egress"
          },
          "dependencies": [
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_i",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allows http access on port 80",
            "from_port": 80,
            "id": "sgrule-2277639745",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fcbe5edcd3021ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_e",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allows https access on port 443",
            "from_port": 443,
            "id": "sgrule-2495525875",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fcbe5edcd3021ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "dependencies": [
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_https_i",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allows https access on port 443",
            "from_port": 443,
            "id": "sgrule-2787262017",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06fcbe5edcd3021ca",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_e",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allows mysql access on port 3306",
            "from_port": 3306,
            "id": "sgrule-3485008227",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ff7e32ab4f5856f",
            "self": false,
            "source_security_group_id": "sg-06fcbe5edcd3021ca",
            "to_port": 3306,
            "type": "egress"
          },
          "dependencies": [
            "module.instance.module.db.aws_security_group.rds_mysql_sg",
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.db",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_mysql_i",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allows mysql access on port 3306",
            "from_port": 3306,
            "id": "sgrule-2832658464",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-00ff7e32ab4f5856f",
            "self": false,
            "source_security_group_id": "sg-06fcbe5edcd3021ca",
            "to_port": 3306,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.module.db.aws_security_group.rds_mysql_sg",
            "module.instance.module.security_group.aws_security_group.https_sg"
          ]
        }
      ]
    },
    {
      "module": "module.instance.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "88.98.242.130/32"
            ],
            "description": "allows ssh access on port 22",
            "from_port": 22,
            "id": "sgrule-2854043635",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d69fdf093e33c8b7",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.module.security_group.aws_security_group.ssh_sg"
          ]
        }
      ]
    }
  ]
}